--- a/css/index-style.css
+++ b/css/index-style.css
@@ -1,7 +1,9 @@
 /* font Awesome http://fontawesome.io*/
-@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
+/*@import url(//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);*/
+@import url(font-awesome-4.7.0/css/font-awesome.min.css);
 /* Animation.css*/
-@import url(https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css);
+/*@import url(https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css);*/
+@import url(animate.min.css);
 
 .col-item {
     border: 1px solid #E1E1E1;
