--- a/css/index-style.css
+++ b/css/index-style.css
@@ -28,26 +28,28 @@
 
 .col-item .photo img {
     margin: 0 auto;
-    width: 100%;
-    max-height: 150px;
+    /*width: 100%;*/
+    /*max-height: 250px;*/
+    width: 250px;
+    height: 150px;
 }
 
 .col-item .options-cart-round {
     position: absolute;
-    left: 25%;
+    right: 55%;
     top: 20%;
     display: none;
 }
 
 .col-item .options-wishlist-round {
     position: absolute;
-    right: 25%;
+    left: 55%;
     top: 20%;
     display: none;
 }
 
 .col-item .options-cart-round button {
-    border-radius: 50%;
+    border-radius: 55%;
     padding: 14px 16px;
 
 }
